--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <body>
 
     <div class="top">
-    <h1> Broadway Design</h1>
-    <nav>
-      <ul>
+     <h1> Broadway Design</h1>
+     <nav>
+       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#team">Team</a></li>
         <li><a href="contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+     </ul>
+     </nav>
+    </div>
 
   <h2>Our Process</h2>
 
@@ -48,32 +48,27 @@
     <h2>Designed in New York</h2>
   </div>
 
-  <h2> Portfolio</h2>
-  <p>
+  <h3> Portfolio</h3>
+  <p class="text">
     Coming Soon
   </p>
-  <h2>Team</h2>
-  <p>
+  <h3>Team</h3>
+  <p class="text">
     We're Hiring!
   </p>
-  <h2> Contact</h2>
-  <p>Phone: (555)-555-5555</p>
-  <p>E-mail: test@example.com<!-- COMBAK:  --></p>
-  <p>Twitter: @test</p>
+  <h3> Contact</h3>
+  <p class="text">Phone: (555)-555-5555</p>
+  <p class="text">E-mail: test@example.com<!-- COMBAK:  --></p>
+  <p class="text">Twitter: @test</p>
 
   <div class="bottom">
-    <p>
-      @ Broadway 2017
-    </p>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="contact">Contact</a></li>
-      </ul>
-    </nav>
+    <p>@ Broadway 2017
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="contact">Contact</a>
+   </p>
   </div>
 
 
